# cookiecutter-fastapi

./: .flake8  .gitignore  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
assets/: style.css
docs/: index.md
hooks/: post_gen_project.py
nav/development-guide/: index.html
nav/getting-started/: index.html
nav/release-notes/: index.html
search/: search_index.json
{{cookiecutter.project_slug}}/: .dockerignore  .env-exemple  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.code_quality/: .flake8  black.toml  isort.cfg  mypy.ini  ruff.toml
{{cookiecutter.project_slug}}/.github/workflows/: code-quality.yml  python-app-code.yml  test.yml
{{cookiecutter.project_slug}}/api/v1/: routers.py
{{cookiecutter.project_slug}}/api/v1/endpoints/: item.py
{{cookiecutter.project_slug}}/app/: __init__.py  main.py
{{cookiecutter.project_slug}}/app/api/: __init__.py
{{cookiecutter.project_slug}}/app/api/v1/: __init__.py
{{cookiecutter.project_slug}}/app/api/v1/endpoints/: __init__.py  item.py  item_auth.py  templates.py
{{cookiecutter.project_slug}}/app/controllers/: item.py
{{cookiecutter.project_slug}}/app/core/: controller.py  database.py  query.py  settings.py  templates.py
{{cookiecutter.project_slug}}/app/core/auth/: base.py  endpoints.py  security.py
{{cookiecutter.project_slug}}/app/core/auth/models/: auth_user.py
{{cookiecutter.project_slug}}/app/core/auth/schemas/: login.py  signup.py
{{cookiecutter.project_slug}}/app/core/environments/: __init__.py  development.py  production.py  test.py
{{cookiecutter.project_slug}}/app/core/settings/: __init__.py  development.py  production.py
{{cookiecutter.project_slug}}/app/models/: item.py
{{cookiecutter.project_slug}}/app/requirements/: base.txt  development.txt
{{cookiecutter.project_slug}}/app/schemas/: item.py
{{cookiecutter.project_slug}}/app/static/: styles.css
{{cookiecutter.project_slug}}/app/static/templates/: index.html
{{cookiecutter.project_slug}}/requirements/: development.txt
{{cookiecutter.project_slug}}/tests/: conftest.py  test_auth.py  test_item.py  test_main.py  test_templates.py
