[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
mangum = "^0.17.0"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
mkdocs = "^1.5.3"
mkdocs-simple-blog = "^0.0.9"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[tool.poetry.group.testing.dependencies]
tox = "^4.11.3"
pytest = "^7.4.3"


[tool.poetry.group.code-quality.dependencies]
flake8 = "^6.1.0"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
