[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
package-mode = false
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
{%- if cookiecutter.use_mkdocs == 'y' %}
mkdocs = "^1.5.3"
mkdocs-simple-blog = "^0.0.9"
{%- endif %}
pydantic-settings = "^2.1.0"
{%- if cookiecutter.use_auth == 'y' %}
pydantic = {extras = ["email"], version = "^2.5.3"}
pyjwt = "^2.8.0"
passlib = "^1.7.4"
{%- else %}
pydantic = "^2.5.3"
{%- endif %}
sqlalchemy = "^2.0.25"
{%- if cookiecutter.use_templates == 'y' %}
jinja2 = "^3.1.2"
{%- endif %}


[tool.poetry.group.testing.dependencies]
tox = "^4.11.3"
pytest = "^7.4.3"
httpx = "^0.25.0"


[tool.poetry.group.code-quality.dependencies]
flake8 = "^6.1.0"
coverage = "^7.3.2"
ruff = "^0.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
